<?xml version="1.0" encoding="utf-8"?>

<!-- u-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/first_module_ic_home_black_24dp"
        android:orderInCategory="0"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/first_module_ic_dashboard_black_24dp"
        android:orderInCategory="1"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/first_module_ic_notifications_black_24dp"
        android:orderInCategory="2"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_notifications1"
        android:icon="@drawable/first_module_ic_notifications_black_24dp"
        android:orderInCategory="3"
        android:title="@string/title_notifications1" />

    <item
        android:id="@+id/navigation_notifications12"
        android:icon="@drawable/first_module_ic_notifications_black_24dp"
        android:orderInCategory="3"
        android:title="@string/title_notifications1" />
</menu>
