<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/first_module_action_edit"
        android:icon="@mipmap/first_module_ic_launcher"
        android:orderInCategory="80"
        android:title="@string/first_module_action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/first_module_action_share"
        android:icon="@mipmap/first_module_ic_launcher_round"
        android:orderInCategory="90"
        android:title="@string/first_module_action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/first_module_action_overflow"
        android:icon="@mipmap/first_module_ic_launcher"
        android:orderInCategory="100"
        android:title="@string/first_module_action_more"
        app:showAsAction="always" />

</menu>