<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/first_module_ic_launcher"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@mipmap/first_module_ic_launcher_round"
                android:title="Send" />
        </menu>
    </item>

    <!--item都只能单选，不能多选 -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_edit"
            android:icon="@mipmap/first_module_ic_launcher"
            android:orderInCategory="80"
            android:title="@string/first_module_action_edit"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_share"
            android:icon="@mipmap/first_module_ic_launcher_round"
            android:orderInCategory="90"
            android:title="@string/first_module_action_share"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_overflow"
            android:icon="@mipmap/first_module_ic_launcher"
            android:orderInCategory="100"
            android:title="@string/first_module_action_more"
            app:showAsAction="always" />

    </group>

</menu>